# smartframe-photocrop

./: .gitignore  GEMINI.md  LICENSE  README.md  config.json  main.py  pyproject.toml  requirements.txt  run.ps1  setup.ps1
core/: exporter.py  image_engine.py
ui/: main_window.py  preview_canvas.py  sidebar.py
utils/: config_manager.py  constants.py
